--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <button class="form-button">
                 Acessar
             </button>
+            <button class="register-button">
+               <a href="register.html">Cadastrar</a>
+            </button>
         </div>
     </div>
 </body>
